--- a/java110-core/pom.xml
+++ b/java110-core/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>aliyun-java-sdk-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
