--- a/pom.xml
+++ b/pom.xml
@@ -524,6 +524,14 @@
                 <version>6.0.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.tencentcloudapi</groupId>
+                <artifactId>tencentcloud-sdk-java</artifactId>
+                <!-- go to https://search.maven.org/search?q=tencentcloud-sdk-java and get the latest version. -->
+                <!-- 请到https://search.maven.org/search?q=tencentcloud-sdk-java查询最新版本 -->
+                <version>3.0.112</version>
+            </dependency>
+
             <!--<dependency>
                 <groupId>org.activiti</groupId>
                 <artifactId>activiti-modeler</artifactId>
@@ -566,6 +574,8 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+
 
 
     </dependencies>
