--- a/WebService/docker/docker-compose.yml
+++ b/WebService/docker/docker-compose.yml
@@ -12,14 +12,14 @@ services:
        - ../target/WebService.jar:/root/target/WebService.jar
        networks:
        - java110-net
-#       mem_limit: 1024m
-#       extra_hosts:
-#       - "dev.java110.com:192.168.1.18"
-#       - "dev.db.java110.com:192.168.1.18"
-#       - "dev.zk.java110.com:192.168.1.18"
-#       - "dev.kafka.java110.com:192.168.1.18"
-#       - "dev.redis.java110.com:192.168.1.18"
-#       - "api.java110.com:92.168.1.18"
+       mem_limit: 1024m
+       extra_hosts:
+       - "dev.java110.com:192.168.8.143"
+       - "dev.db.java110.com:192.168.8.143"
+       - "dev.zk.java110.com:192.168.8.143"
+       - "dev.kafka.java110.com:192.168.8.143"
+       - "dev.redis.java110.com:192.168.8.143"
+       - "api.java110.com:192.168.8.143"
 networks:
   java110-net:
     external: true
