--- a/eureka/docker/docker-compose.yml
+++ b/eureka/docker/docker-compose.yml
@@ -10,16 +10,17 @@ services:
        - "8761:8761"
        volumes:
        - ../target/eureka.jar:/root/target/eureka.jar
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 1024m
-       extra_hosts:
-         - "dev.java110.com:192.168.8.108"
-         - "dev.db.java110.com:192.168.8.108"
-         - "dev.zk.java110.com:192.168.8.108"
-         - "dev.kafka.java110.com:192.168.8.108"
-         - "dev.redis.java110.com:192.168.8.108"
-         - "api.java110.com:192.168.8.108"
+#       extra_hosts:
+#         - "dev.java110.com:192.168.8.143"
+#         - "dev.db.java110.com:192.168.8.143"
+#         - "dev.zk.java110.com:192.168.8.143"
+#         - "dev.kafka.java110.com:192.168.8.143"
+#         - "dev.redis.java110.com:192.168.8.143"
+#         - "api.java110.com:192.168.8.143"
 networks:
   java110-net:
     external: true
