--- a/FeeService/docker/docker-compose.yml
+++ b/FeeService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8010:8010"
        volumes:
        - ../target/FeeService.jar:/root/target/FeeService.jar
-       - /etc/hosts:/etc/hosts
+       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 1024m
