--- a/ShopService/docker/docker-compose.yml
+++ b/ShopService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8007:8007"
        volumes:
        - ../target/ShopService.jar:/root/target/ShopService.jar
-       - /etc/hosts:/etc/hosts
+       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 1024m
