--- a/eureka/docker/docker-compose.yml
+++ b/eureka/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8761:8761"
        volumes:
        - ../target/eureka.jar:/root/target/eureka.jar
-       - /etc/hosts:/etc/hosts
+       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 1024m
