--- a/FeeService/docker/docker-compose.yml
+++ b/FeeService/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
        ports:
        - "8010:8010"
        volumes:
-       - ../target/FeeService.jar:/root/target/FeeService.jar
+       - ../target/FeeService.jar:/target/FeeService.jar
        - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
