--- a/ReportService/docker/docker-compose.yml
+++ b/ReportService/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
        ports:
        - "8007:8007"
        volumes:
-       - ../target/ReportService.jar:/root/target/ReportService.jar
+       - ../target/ReportService.jar:/target/ReportService.jar
        - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
