--- a/ShopService/docker/docker-compose.yml
+++ b/ShopService/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
        ports:
        - "8007:8007"
        volumes:
-       - ../target/ShopService.jar:/root/target/ShopService.jar
+       - ../target/ShopService.jar:/target/ShopService.jar
        - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
