--- a/WebService/docker/docker-compose.yml
+++ b/WebService/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
        ports:
        - "443:8443"
        volumes:
-       - ../target/WebService.jar:/root/target/WebService.jar
+       - ../target/WebService.jar:/target/WebService.jar
        - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
        networks:
        - java110-net
