--- a/UserService/docker/docker-compose.yml
+++ b/UserService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8002:8002"
        volumes:
        - ../target/UserService.jar:/target/UserService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
