--- a/Api/docker/docker-compose.yml
+++ b/Api/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8008:8008"
        volumes:
        - ../target/Api.jar:/target/Api.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
