--- a/AppFrontService/docker/docker-compose.yml
+++ b/AppFrontService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8012:8012"
        volumes:
        - ../target/AppFrontService.jar:/target/AppFrontService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
