--- a/CommonService/docker/docker-compose.yml
+++ b/CommonService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8005:8005"
        volumes:
        - ../target/CommonService.jar:/target/CommonService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
