--- a/CommunityService/docker/docker-compose.yml
+++ b/CommunityService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8009:8009"
        volumes:
        - ../target/CommunityService.jar:/target/CommunityService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
