--- a/ReportService/docker/docker-compose.yml
+++ b/ReportService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8007:8007"
        volumes:
        - ../target/ReportService.jar:/target/ReportService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
