--- a/StoreService/docker/docker-compose.yml
+++ b/StoreService/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
        - "8006:8006"
        volumes:
        - ../target/StoreService.jar:/target/StoreService.jar
-       - /home/xuliang/docker-volumes/etc/hosts:/etc/hosts
+       - /etc/hosts:/etc/hosts
        networks:
        - java110-net
        mem_limit: 2048m
