--- a/StoreService/src/main/resources/application-dev.yml
+++ b/StoreService/src/main/resources/application-dev.yml
@@ -15,6 +15,7 @@ eureka:
     leaseExpirationDurationInSeconds: 30
     preferIpAddress: true
     instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    prefer-ip-address: true
     ip-address: 62.234.79.191
   client:
     serviceUrl:
