--- a/WebService/src/main/resources/java110.properties
+++ b/WebService/src/main/resources/java110.properties
@@ -7,10 +7,10 @@ java110.ftp.multipart.maxFileSize=100Mb
 java110.ftp.multipart.maxRequestSize=100Mb
 
 #ftp use
-java110.ftpServer = 192.168.0.104
+java110.ftpServer = dev.java110.com
 java110.ftpPort = 6069
-java110.ftpUserName = uftp
-java110.ftpUserPassword = 123456
+java110.ftpUserName = xuliang
+java110.ftpUserPassword = xiaolao2020_test
 java110.ftpPath = hc/
 
 
