--- a/WebService/src/main/resources/java110.properties
+++ b/WebService/src/main/resources/java110.properties
@@ -9,8 +9,8 @@ java110.ftp.multipart.maxRequestSize=100Mb
 #ftp use
 java110.ftpServer = dev.java110.com
 java110.ftpPort = 6069
-java110.ftpUserName = xuliang
-java110.ftpUserPassword = xiaolao2020_test
+java110.ftpUserName = hc
+java110.ftpUserPassword = xiaolao_2020_hc_test
 java110.ftpPath = hc/
 
 
