--- a/UserService/docker/docker-compose.yml
+++ b/UserService/docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
        volumes:
        - ../target/UserService.jar:/target/UserService.jar
        - /etc/hosts:/etc/hosts
+       - /etc/localtime:/etc/localtime
        networks:
        - java110-net
        mem_limit: 2048m
