添加商品添加功能

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>HardwareAdapationService</module>
         <module>AppFrontService</module>
         <module>java110-front</module>
+        <module>MallService</module>
     </modules>
 
     <parent>
