--- a/MallService/pom.xml
+++ b/MallService/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.java110</groupId>
-    <artifactId>mall</artifactId>
+    <artifactId>MallService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>MallService</name>
     <description>Demo project for Spring Boot</description>
