--- a/MallService/src/main/resources/java110.properties
+++ b/MallService/src/main/resources/java110.properties
@@ -1,3 +1,3 @@
-java110.mappingPath=classpath:mapper/user/**/*.xml,classpath:mapper/service/*.xml
+java110.mappingPath=classpath:mapper/commodity/**/*.xml,classpath:mapper/service/*.xml
 
 
